# fm35_decoder

./: .gitignore  LICENSE  README.md  decode_full.py  decode_ttaa.py  fm35_decode.py  main.py  pyproject.toml
.github/workflows/: python-publish.yml  python-testpublish.yml
Reference/: rawinsondedecode.ppt  slidesaver.app_ppevjj.pptx
Table Codes/: CM_0515.csv  Id_1734.csv  MiMi_2582.csv  MjMj_2582.csv  Sr_3849.csv  Symbol_Descriptions.csv  sasa_3872.csv
Test/: demo.mt.json  demo.mt.py
Test Data/: 2023022300-83746.csv  20230223_0000_83746.txt  2026012500-83779.csv
src/fm35_decoder/: __init__.py
src/fm35_decoder/table_codes/: CL_0513.csv  D_0777.csv  T_3931.csv  h_1600.csv
src/fm35_decoder_luciodaou/: decoder.py
src/fm35_decoder_luciodaou/table_codes/: CH_0509.csv  CL_0513.csv  Nh_2700.csv  rara_3685.csv
tests/: demo.mt.py  demo.mt.txt  test_decode.py
