[project]
name = "fm35-decoder"
version = "0.1.1"
description = "A lightweight Python tool to decode standard FM35 TEMP weather messages from upper-air observations."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Lucio Daou" },
]
dependencies = [
    "pandas>=3.0.0",
    "numpy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fm35_decoder"]

[tool.hatch.build.targets.sdist]
include = [
    "src/fm35_decoder",
]

[tool.hatch.metadata]
allow-direct-references = true
