[project]
name = "fm35_decoder"
version = "0.1.2"
description = "A Python tool to decode standard FM35 TEMP weather messages from upper-air observations."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    { name = "Lucio Daou" },
]
dependencies = [
    "pandas>=3.0.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/luciodaou/fm35_decoder"
"Bug Tracker" = "https://github.com/luciodaou/fm35_decoder/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fm35_decoder"]

[tool.hatch.build.targets.sdist]
include = [
    "src/fm35_decoder",
]

[tool.hatch.metadata]
allow-direct-references = true
